[tool.poetry]
name = "asynconcurrent"
version = "0.1.0"
description = "Async version of concurrent.futures"
authors = ["Berislav Lopac <berislav@lopac.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
pytest-mypy = "^0.8.0"

[tool.black]
line-length = 96
target-version = ['py37', 'py38']
verbose = false
skip-string-normalization = false

[tool.coverage.run]
source = [ "asynconcurrent/", ]
omit = [ "*/tests/*", "src/tests/*", ]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 90
exclude_lines = [ "pragma: no cover", "@abstract", ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
